2005-03-18  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * src/Makefile.am:
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-manager-store.h:
    * src/seahorse-key-manager.c:
    * src/eggtreemultidnd.c:
    * src/eggtreemultidnd.h: Added support for the key lists to be drag
    sources (bug# 111137)
    * libseahorse/seahorse-util.c:
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-manager.c: More drag and drop fixes. 

2005-03-03  Nate Nielsen <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.glade: Fix typo and screwed up description
    of insecure passphrases stored in memory 
	* agent/seahorse-agent-actions.c:
	* agent/seahorse-agent-prompt.c:
	* libseahorse/seahorse-prefs-cache.c: Changed usage of 'password' to 
	'passphrase' in user visible text.

2005-02-15  Nate Nielsen <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: Fix tag problem 
    * src/seahorse-key-manager.glade: Fix warnings about events
	
2005-02-14  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-signer.glade: Added missing files from 
    yesterday's 'Prompt for signer' checkin. 
    
2005-02-13  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-libdialogs.h:
    * plugins/gedit/seahorse-gedit.c:
    * src/main.c:
    * src/seahorse-revoke.c: Prompt for signer when no default 
    key is selected.
    * agent/seahorse-agent-cache.c: Display key UID properly in 
    agent window. Open file descriptors in agent daemon so that 
    GPGME works. (bug #159629)
    * configure.in: Allow use with GPG 1.4 (bug #161697)
    
2005-02-10  Nate Nielsen <nielsen@memberwebs.com>

    * HACKING: Added notes and list of non GPGME features we're
    using.
    
2005-02-09  Nate Nielsen <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: 