@@ -5,4 +5,10 @@ else
 GEDIT_DIR = 
 endif
 
-SUBDIRS = nautilus $(GEDIT_DIR)
+if WITH_NAUTILUS_EXT
+NAUTILUS_EXT_DIR = nautilus-ext
+else
+NAUTILUS_EXT_DIR = 
+endif
+
+SUBDIRS = nautilus $(GEDIT_DIR) $(NAUTILUS_EXT_DIR)
