@@ -1,3 +1,15 @@
+2005-03-20  Nate Nielsen <nielsen@memberwebs.com>
+
+    * Makefile.am:
+    * configure.in:
+    * bonobo/Makefile.am:
+    * plugins/Makefile.am:
+    * plugins/nautilus-ext/Makefile.am:
+    * plugins/nautilus-ext/seahorse-nautilus-module.c:
+    * plugins/nautilus-ext/seahorse-nautilus.c:
+    * plugins/nautilus-ext/seahorse-nautilus.h: Gnome 2.10 nautilus
+    extension support. Patch by Fernando Herrera. (bug #160360)
+    
 2005-03-18  Nate Nielsen <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-util.c:
